# goit-pythonweb-hw-08

./: Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml
migrations/versions/: ffb0533f5789_initial_migration.py
postgres-data/base/13481/: pg_internal.init
postgres-data/global/: pg_control  pg_internal.init
postgres-data/pg_stat/: global.stat
src/: schemas.py
src/conf/: config.py
src/db/: models.py
